# Jax_in_cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: simple_example.cpp  sin_example.cpp
include/: operations.hpp  var.hpp
src/: operations.cpp  var.cpp
tests/: test_operations.cpp  test_var.cpp
